fix blinking cursor issue on IE (#1610)

--- a/src/targets/beacon/styles/views/bookingBar/index.less
+++ b/src/targets/beacon/styles/views/bookingBar/index.less
@@ -240,6 +240,7 @@ booking-bar {
       input[type="text"] {
         color: #3C3C3C;
         background: #fff;
+        text-indent: -9999em;
       }
     }
 
